# note-embedding

./: Cargo.toml  README.md  build.rs
src/: config.rs  main.rs  service.rs  telegram.rs  ui.rs
